# yaozarrs

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  justfile  mkdocs.yml  pyproject.toml  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
docs/: OME_ZARR_LAYOUT_RULES.md  guide.md  index.md  installation.md  ome_zarr_explorer.md  ome_zarr_guide.md  structural validation.md
docs/API_Reference/: yaozarrs.md  yaozarrs.v04.md  yaozarrs.v05.md  yaozarrs.write.v05.md
docs/javascripts/: ome_explorer.js  ome_generator.js  ome_units.js  treeview.js  yaozarrs-animation.js
docs/js/: yaozarrs-animation.js
docs/overrides/: main.html
docs/stylesheets/: extra.css  zensical.css
examples/: basic_image.py  basic_plate.py  benchmark_writers.py  demo_from_uri.py  prepare_collection.py  write_collection.py  write_image.py
scripts/: export_units.py  fetch.py  write_demo_zarr.py
src/yaomem/: __init__.py  _base.py  _ome_zarr.py  _utils.py  _validate.py
src/yaomem/v04/: __init__.py  _bf2raw.py  _image.py  _label.py  _ome.py  _plate.py  _well.py
src/yaomem/v05/: __init__.py  _base.py  _bf2raw.py  _image.py  _label.py  _ome.py  _plate.py  _well.py
src/yaozarrs/: __init__.py  _axis.py  _base.py  _cli.py  _demo_data.py  _dim_spec.py  _io.py  _ome_zarr.py  _omero.py  _storage.py  _tree.py  _types.py  _units.py  _util.py  _validate.py  _validation_warning.py  _zarr.py
src/yaozarrs/v04/: __init__.py  _bf2raw.py  _image.py  _label.py  _labels.py  _ome.py  _plate.py  _series.py  _storage.py  _well.py  _zarr_json.py
src/yaozarrs/v05/: __init__.py  _bf2raw.py  _image.py  _label.py  _labels.py  _ome.py  _plate.py  _series.py  _storage.py  _well.py  _write.py  _zarr_json.py
src/yaozarrs/write/: __init__.py
src/yaozarrs/write/v05/: __init__.py  _write.py
test_2551.zarr/: .zattrs
tests/: conftest.py  ome_explorer_runner.mjs  test_cli.py  test_data.py  test_io.py  test_ome_explorer.py  test_readme.py  test_realworld.py  test_storage.py  test_v5.py  test_write_demo_file.py  test_yaomem.py  test_zarr_module.py
tests/data/190129.zarr/: zarr.json
tests/data/1micron_reconstructions_VOI1.zarr/: zarr.json
tests/data/4ffaeed2-fa70-4907-820f-8a96ef683095.zarr/0/: zarr.json
tests/data/4ffaeed2-fa70-4907-820f-8a96ef683095.zarr/1/: zarr.json
tests/data/6001240_labels.zarr/: zarr.json
tests/data/6001240_labels.zarr/0/: zarr.json
tests/data/6001240_labels.zarr/1/: zarr.json
tests/data/76-45.ome.zarr/: zarr.json
tests/data/79ad519b-0aa6-4d64-85a9-6cea2318b980.zarr/0/: zarr.json
tests/data/79ad519b-0aa6-4d64-85a9-6cea2318b980.zarr/1/: zarr.json
tests/data/79ad519b-0aa6-4d64-85a9-6cea2318b980.zarr/2/: zarr.json
tests/data/broken/broken_v05.ome.zarr/: zarr.json
tests/data/broken/broken_v05.ome.zarr/A/1/: zarr.json
tests/data/broken/broken_v05.ome.zarr/A/1/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/A/1/1/: zarr.json
tests/data/broken/broken_v05.ome.zarr/A/2/: zarr.json
tests/data/broken/broken_v05.ome.zarr/A/2/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/A/2/1/: zarr.json
tests/data/broken/broken_v05.ome.zarr/A/3/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/A/3/1/: zarr.json
tests/data/broken/broken_v05.ome.zarr/B/1/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/B/1/1/: zarr.json
tests/data/broken/broken_v05.ome.zarr/B/2/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/B/2/1/: zarr.json
tests/data/broken/broken_v05.ome.zarr/B/3/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/B/3/1/: zarr.json
tests/data/broken/broken_v05.ome.zarr/C/1/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/C/2/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/C/2/1/: zarr.json
tests/data/broken/broken_v05.ome.zarr/C/3/: zarr.json
tests/data/broken/broken_v05.ome.zarr/C/3/0/: zarr.json
tests/data/broken/broken_v05.ome.zarr/C/3/1/: zarr.json
tests/data/c0e5d621-62cc-43a6-9dad-2ddab8959d17.zarr/: zarr.json
tests/data/c0e5d621-62cc-43a6-9dad-2ddab8959d17.zarr/0/: zarr.json
tests/data/c0e5d621-62cc-43a6-9dad-2ddab8959d17.zarr/1/: zarr.json
tests/data/c0e5d621-62cc-43a6-9dad-2ddab8959d17.zarr/2/: zarr.json
tests/data/fb416517-e36d-4bdb-98f9-47b644138d47.zarr/0/: zarr.json
tests/data/fb416517-e36d-4bdb-98f9-47b644138d47.zarr/1/: zarr.json
tests/data/fb416517-e36d-4bdb-98f9-47b644138d47.zarr/2/: zarr.json
tests/data/v04/: download_zarr_metadata_parallel.py
tests/data/v04/2551.zarr/A/2/: .zattrs
tests/data/v04/2551.zarr/A/2/2/: .zattrs
tests/data/v04/2551.zarr/A/2/3/labels/: .zattrs
tests/data/v04/2551.zarr/B/1/3/: .zattrs
tests/data/v04/2551.zarr/B/1/4/: .zattrs
tests/data/v04/2551.zarr/B/2/1/: .zattrs
tests/data/v04/4007801.zarr/: .zattrs
tests/data/v04/6001239.zarr/: .zattrs
tests/data/v04/6001245.zarr/: .zattrs
tests/data/v04/9798462.zarr/: .zattrs
tests/data/v04/9836950.zarr/: .zattrs
tests/data/v05/190129.zarr/: zarr.json
tests/data/v05/4ffaeed2-fa70-4907-820f-8a96ef683095.zarr/: zarr.json
tests/data/v05/6001240_labels.zarr/: zarr.json
tests/data/v05/6001240_labels.zarr/labels/: zarr.json
tests/data/v05/6001240_labels.zarr/labels/0/: zarr.json
tests/data/v05/76-45.ome.zarr/: zarr.json
tests/data/v05/76-45.ome.zarr/A/1/: zarr.json
tests/data/v05/76-45.ome.zarr/A/1/0/: zarr.json
tests/data/v05/76-45.ome.zarr/A/2/0/: zarr.json
tests/data/v05/76-45.ome.zarr/B/1/0/: zarr.json
tests/data/v05/76-45.ome.zarr/B/2/0/: zarr.json
tests/data/v05/79ad519b-0aa6-4d64-85a9-6cea2318b980.zarr/: zarr.json
tests/data/v05/9822152.zarr/: zarr.json
tests/data/v05/ExpD_chicken_embryo_MIP.ome.zarr/: zarr.json
tests/data/v05/L3_nsybG4xcherryCAAXmerged.ims.zarr/: zarr.json
tests/data/v05/Target-TS.ome.zarr/: zarr.json
tests/data/v05/fb416517-e36d-4bdb-98f9-47b644138d47.zarr/: zarr.json
tests/v04/: test_bf2raw_v04.py  test_images_v04.py  test_labels_v04.py  test_plate_v04.py
tests/v05/: test_bf2raw_v05.py  test_images_v05.py  test_labels_v05.py  test_plate_v05.py  test_storage_v05.py  test_write.py
tests/write/v05/: test_write.py
(+12 files in other folders)
