# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# https://peps.python.org/pep-0621/
[project]
name = "yaozarrs"
dynamic = ["version"]
description = "Yet another ome-zarr model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.1.0",
    "pydantic-core>=2.20.0; python_version>='3.13'",
    "typing-extensions>=4.6.0",
]


[project.urls]
homepage = "https://github.com/tlambert03/yaozarrs"
repository = "https://github.com/tlambert03/yaozarrs"


[dependency-groups]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
dev = [
    { include-group = "test" },
    "ipython>=8.37.0",
    "mypy>=1.18.2",
    "pdbpp>=0.11.7; sys_platform != 'win32'",
    "pre-commit-uv>=4.1.5",
    "pyright>=1.1.405",
    "rich>=14.1.0",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]

[tool.uv.sources]
yaozarrs = { workspace = true }

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
"docs/*.py" = ["D", "A"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # default is false

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--color=yes"]
testpaths = ["tests"]
filterwarnings = ["error"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pyright]
pythonVersion = "3.10"
reportArgumentType = false
enableExperimentalFeatures = true

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "raise AssertionError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["yaozarrs"]

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
    "uv.lock",
]

# https://github.com/crate-ci/typos/blob/master/docs/reference.md
[tool.typos.default]
extend-ignore-identifiers-re = ["(?i)ome", "AIMD"]

[tool.ty.environment]
python = "./.venv"
